--- a/example/Gemfile
+++ b/example/Gemfile
@@ -13,6 +13,7 @@ gem 'json'
 gem 'rabl'
 
 gem 'hashbrowns', :path => '../'
+gem 'bootstrap-sass'
 
 # Gems used only for assets and not required
 # in production environments by default.
